--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="ganesh-icon">
                     <img src="https://png.pngtree.com/png-vector/20231227/ourmid/pngtree-lord-ganesh-png-image_11385250.png" alt="Lord Ganesh">
                 </div>
-                <p class="sacred-text">।। Sri Ganeshya Namah ।।</p>
+                <p class="sacred-text">।। Shri Ganeshay Namah ।।</p>
             </div>
             <div class="card-content">
                 <!-- Textbox to input guest name -->
@@ -276,27 +276,27 @@
                     <ul>
                         <li><strong>Date:</strong> 12th December 2024, Thursday</li>
                         <li><strong>Time:</strong> 11:51 AM</li>
-                        <li><strong>Place:</strong> #14-3-261/2/B, Seven Heaven Resturant,<br> Begum Bazar, Hyderabad - 500012</li>
+                        <li><strong>Place:</strong> #14-3-261/2, Opp. Seven Heaven Restaurant,<br> Begum Bazar, Hyderabad - 500012</li>
                     </ul>
                 </div>
                 <p class="offer">
                     <strong>Our Offerings:</strong> Sweets and snacks made from pure Desi Ghee – a tradition of love and quality in every bite.<P></P>
-                    <strong>Inaugurated By:</strong> Shri Bholedasji Maharaj
+                    <strong>Inaugurated By:</strong> Sri Sri Sevaram Ji Maharaj (BaapJi) Sri Ramnath Ashram, Begum Bazar, Hyderabad
                 </p>
                 <div class="special-request">
                     <h3 style="color: var(--secondary-color)">Special Requests by</h3>
                     <ul>
-                        <li>Shri Ganshyam Ji Bhati (JJ Dry Fruits)</li>
-                        <li>Shri Avinash Ji Devda</li>
-                        <li>Shri Suresh Ji Sankhla (Suru Bhai)</li>
-                        <li>Shri Pannalal Ji Tak (Nalgonda)</li>
+                        <li>Sri Ganshyam Ji Bhati (J.J. Dry Fruits)</li>
+                        <li>Sri Avinash Ji Devda</li>
+                        <li>Sri Suresh Ji Sankhla (Suru Bhai)</li>
+                        <li>Sri Pannalal Ji Tak (Nalgonda)</li>
                     </ul>
                 </div>
                 <div class="family-businesses">
                     <h3 style="color: var(--secondary-color); margin-bottom: 5px; font-size: 18px;">With Best Compliments from:</h3>
                     <ul>
-                        <li>Balaji Family Dhaba, Lingampalli, Hyderabad</li>
-                        <li>Nareshkumar Sankhla, Chartered Accountant, Malakpet, Hyderabad</li>
+                        <li>Balaji Family Dhaba <br>Lingampalli, Hyderabad</li>
+                        <li>Naresh Kumar Sankhla <br>Chartered Accountant<br>Malakpet, Hyderabad</li>
                         
                     </ul>
                 </div>
